--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        </meta http-equiv="refresh">
+        <meta http-equiv="X-UA-compatible" content="IE-edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Grupo 51</title>
     </head>
 
     <body>
-        <h2>Pagina de prueba</h2>
+        <h1>Pagina de prueba</h1>
+        <h2>Diego</h2>
     </body>
 
     <footer>
