--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     </head>
 
     <body>
+        <div align="center"><img src="imagenes/asuka_chiquita.gif"></div>
         <h1>Pagina de prueba</h1>
         <h2>Diego</h2>
+        <h2 class="h2_nice borde">lti</h2>
         <h3>Facpya</h3>
     </body>
 
