--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <body>
         <div align="center"><img src="imagenes/asuka_chiquita.gif"></div>
-        <h1>Pagina de prueba</h1>
-        <h2>Diego</h2>
-        <h2 class="h2_nice borde">lti</h2>
-        <h3>Facpya</h3>
+        <h1 style="color: chocolate;" id="header">Pagina de prueba</h1>
+        <h2 lang="es">Diego</h2>
+        <h2 tabindex = 1 class="h2_nice borde">lti</h2>
+        <h2 tabindex = 2 >Hello</h2>
+        <h3 tabindex = 3 lang="en">Facpya</h3>
     </body>
 
     <footer>
