--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pagina de prueba de html clase lti">
+        <meta name="keywords" content="html, web, escuela, prueba">
+        <meta name="autor" content="Diego Luna">
+        <script src="app.js"></script>
+        <link rel="stylesheet" href="estilos.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <title>Grupo 51</title>
     </head>
 
@@ -14,6 +20,10 @@
         <h2 tabindex = 1 class="h2_nice borde">lti</h2>
         <h2 tabindex = 2 >Hello</h2>
         <h3 tabindex = 3 lang="en">Facpya</h3>
+        <address>
+            Ubicación: Av. Miguel Aleman 
+            Colonia: Z
+        </address>
     </body>
 
     <footer>
