etiquetas de seccionado

--- a/index.html
+++ b/index.html
@@ -14,19 +14,35 @@
     </head>
 
     <body>
-        <div align="center"><img src="imagenes/asuka_chiquita.gif"></div>
-        <h1 style="color: chocolate;" id="header">Pagina de prueba</h1>
-        <h2 lang="es">Diego</h2>
-        <h2 tabindex = 1 class="h2_nice borde">lti</h2>
-        <h2 tabindex = 2 >Hello</h2>
-        <h3 tabindex = 3 lang="en">Facpya</h3>
+        <header>
+            <nav>
+                links
+            </nav>
+        </header>
+
+        <article>
+            <h1>HTML</h1>
+                <p>html no es un lenguaje de programacion si no un lenguaje estructurado</p>
+            <h2>Historia</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum praesentium tempora molestias dolores quo placeat assumenda consectetur error, pariatur earum fugiat autem atque laborum architecto voluptatibus ad quis aperiam inventore?</p>
+            <h2>Etiquetas para seccionado</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita in iusto cum veritatis nisi voluptates blanditiis quasi repellendus ipsam deleniti itaque, reiciendis eligendi quos nulla unde quidem cupiditate illo necessitatibus?</p>
+        </article>
+
+        <aside>
+            <p>soy el aside</p>
+            <section>seccion 1</section>
+            <section>seccion 2</section>
+        </aside>
+
+        <footer>
+            <p>soy el pie de pagina</p>
+        </footer>
+
         <address>
-            Ubicación: Av. Miguel Aleman 
+            Direccion: Av. Miguel Aleman
             Colonia: Z
         </address>
     </body>
 
-    <footer>
-        este es el pie de pagina
-    </footer>
 </html>
